--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500&family=Roboto&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    border: none;
+
+}
+
 body{
-font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
