--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -8,6 +8,18 @@
 }
 
 body{
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;  
+    font-weight: 400; 
+    color: #3a3a3a; 
+}
+/* Headings and Logos */
+h1, h2{
     font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    color: #252525
+}
+#logo{
+    float: left;
+    size: 280%
 }
