Added right & left content and structure

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -100,7 +100,7 @@ transform: scale(1.153);
     position: absolute;
 }
 /* yoga-classes */
-#yoga-classes {
+#yoga-ethos {
 height: 600px;
 
 }
@@ -108,16 +108,45 @@ height: 600px;
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
+  
+   
 }
 #right{
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: red;
+   
 }
 #middle {
     width: 33%;
     margin: 0 auto;
     background-color: yellow;
+}
+hr {
+    border-bottom: 4px;
+    width: 100%;
+    margin: 5px 0;
+
+}
+.left-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+   
+}
+.right-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+   
+}
+.right-heading h2{
+    text-align: right;
+}
+.right-heading p{
+    text-align: right;
 }
