--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -120,7 +120,7 @@ height: 600px;
 #middle {
     width: 33%;
     margin: 0 auto;
-    background-color: yellow;
+    
 }
 hr {
     border-bottom: 4px;
@@ -149,4 +149,25 @@ hr {
 }
 .right-heading p{
     text-align: right;
+}
+#welcome{
+    text-align: center;
+    margin: 20px 0;
+    font-size: 200%;
+}
+#container{
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+
+}
+#circle-bg{
+    background: url('../images/pose.png') no-repeat center center;
+    height: 100%;
+    
 }
