--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -30,12 +30,11 @@ h1, h2 {
 
 }
 
-/* nav links & style*/
+/* nav links & logo style*/
 #nav {
     font-size: 110%;
     letter-spacing: 4px;
     float: right;
-    flex-direction: row;
 }
 #nav, #logo {
     line-height: 75px;
@@ -43,6 +42,7 @@ h1, h2 {
 #nav li {
     list-style-type: none;
     margin-right: 30px;
+    display: inline;
 }
 #nav a {
     text-decoration: none;
@@ -122,7 +122,6 @@ hr {
     grid-gap: 20px;
     padding-left: 150px;
     padding-right: 150px;
-    margin-bottom: ;
 }
 /*grid box for 3 divs*/
 .grid-container-two
@@ -207,7 +206,24 @@ hr {
     border-radius: 50%;
     
 }
-/*text styled on teachers*/
+/*text styled on instructors*/
+.container-teach{
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+
+}
+.circle-teach{
+    height: 100%;
+    border-radius: 50%;
+    background: no-repeat center center;
+    
+}
 .teach-text{
 text-align: left;
 }
