--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -238,3 +238,27 @@ text-align: left;
 #end{
     height: 300px;
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    #header {
+      width: 100%;
+    }
+    #grid-container {
+        width: 100%;
+      }
+      #heading-two {
+        width: 100%;
+      }
+      #image-one {
+        width: 100%;
+      }
+      #image {
+        width: 100%;
+      }
+      #heading-one {
+        width: 100%;
+      }
+      #footer{
+          width: 100%;
+      }
+  }
