--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -10,6 +10,9 @@ body {
     font-family: 'Noto Sans KR', sans-serif;  
     font-weight: 300; 
     color: #3a3a3a; 
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1800px;
 }
 /* Headings and Logos */
 h1, h2 {
@@ -114,11 +117,11 @@ hr {
     height: 600px;
 }
 /*grid box for two divs*/
-.grid-container
+.container
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    display: flex;
+   /*grid-template-columns: 1fr 1fr;
+    grid-gap: 20px; */
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -133,14 +136,14 @@ hr {
     margin-bottom: 50px;
 }
 /*why do yoga*/
-.heading-one {
-     
+.box {
+    flex-direction: column; 
     line-height: 20px;
     text-align: left;
     margin-left: 150px;
 }
 /* what is yoga */ 
-.heading-two {
+. {
      
     line-height: 20px;
     text-align: right;
@@ -197,6 +200,7 @@ hr {
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
+    outline: 1px solid red;
 
 }
 /*image within circle 1*/
@@ -238,27 +242,14 @@ text-align: left;
 #end{
     height: 300px;
 }
+/*
+.col-1 {width: 50%;}
+.col-2 {width: 50%;}
+.col-3 {width: 50%;}
+.col-4 {width: 50%;}
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    #header {
+    /* For mobile phones: 
+    [class*="col-"] {
       width: 100%;
     }
-    #grid-container {
-        width: 100%;
-      }
-      #heading-two {
-        width: 100%;
-      }
-      #image-one {
-        width: 100%;
-      }
-      #image {
-        width: 100%;
-      }
-      #heading-one {
-        width: 100%;
-      }
-      #footer{
-          width: 100%;
-      }
-  }
+  }*/
