--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -143,7 +143,7 @@ hr {
 .box-one {
     line-height: 20px;
     text-align: right;
-
+    height: 30rem;
     padding: 1rem;
  
 }
@@ -152,6 +152,7 @@ hr {
      
     line-height: 20px;
     text-align: left;
+    height:30rem;
     padding: 1rem;
 
 }
@@ -202,9 +203,11 @@ text-align: left;
     font-size: x-large;
 }
 .footer{
-    height: 300px;
+    height: 10rem;
     text-align: center;
-    font-size: 12px;
     padding: 15px;
+}
+i{
+    padding: 5rem;
 }
 
