--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -207,6 +207,9 @@ text-align: left;
     text-align: center;
     font-size: x-large;
 }
+.courses{
+    padding: 2rem;
+}
 .footer{
     height: 10rem;
     text-align: center;
