--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -205,6 +205,17 @@ text-align: left;
     height: 10rem;
     text-align: center;
     padding: 15px;
+    
+}
+footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color:#ed7014; 
+    text-decoration:none; 
+    cursor: pointer;  
 }
 i{
     padding: 5rem;
