--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -201,18 +201,56 @@ text-align: left;
 .courses{
     padding: 2rem;
 }
+#contact-heading{
+    padding-top: 4rem;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 12px;
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+  }
+  
+  /* Styling the submit button */
+  input[type=submit] {
+    background-color: #ed7014;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker color */
+  input[type=submit]:hover {
+    background-color: #491d01;
+  }
+  
+  /* Add a background color and some padding around the form */
+  .contact-container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 2rem;
+}
+/*footer styling*/
 .footer{
     height: 10rem;
     text-align: center;
-    padding: 15px;
-    
+    padding: 15px;   
 }
-footer a {
+.footer a {
     color: inherit;
     text-decoration: none;
 }
 
-footer a:hover {
+.footer a:hover {
     color:#ed7014; 
     text-decoration:none; 
     cursor: pointer;  
