--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,8 +221,8 @@ text-align: left;
     padding-bottom: 1rem;
     text-align: center;
 }
-/* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
+/* Style inputs with type="text", type="email", select elements and textareas */
+input[type=text],input[type=email], select, textarea {
     width: 100%; 
     padding: 12px;
     border: 1px solid #ccc; 
@@ -232,7 +232,6 @@ input[type=text], select, textarea {
     margin-bottom: 16px; 
     resize: vertical 
   }
-  
   /* Styling the submit button */
   input[type=submit] {
     background-color: #ed7014;
@@ -251,7 +250,7 @@ input[type=text], select, textarea {
   /* Add a background color and some padding around the form */
   .contact-container {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #fed8b1;
     padding: 2rem;
 }
 /*footer styling*/
